--- a/public/index.html
+++ b/public/index.html
@@ -2,17 +2,33 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/assets/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Portfolio website for Pierre Du Toit, professional software developer" />
+  <meta charset="utf-8" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/assets/logo192.png" />
-  <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
   <link rel="manifest" href="%PUBLIC_URL%/assets/manifest.json" />
+
+  <!-- HTML Meta Tags -->
+  <title>Pierre Du Toit</title>
+  <meta name="description" content="Professional Software Engineer | Cloud Architect">
+
+  <!-- Facebook Meta Tags -->
+  <meta property="og:url" content="https://www.pierredutoit.me/">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Pierre Du Toit">
+  <meta property="og:description" content="Professional Software Engineer | Cloud Architect">
+  <meta property="og:image" content="https://pierredutoit.me/assets/Launch.png">
+
+  <!-- Twitter Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta property="twitter:domain" content="">
+  <meta property="twitter:url" content="https://www.pierredutoit.me/">
+  <meta name="twitter:title" content="Pierre Du Toit">
+  <meta name="twitter:description" content="Professional Software Engineer | Cloud Architect">
+  <meta name="twitter:image" content="https://pierredutoit.me/assets/Launch.png">
+
+
   <title>Pierre Du Toit</title>
 </head>
 
